# dbus-udisks-analysis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: findings.md  methodology.md  signal-reference.md
results/: .gitkeep
tests/: conftest.py  test_000_udisks2_limits.py  test_001_recovery.py  test_002_crash_monitor.py  test_backend_comparison.py  test_bus_daemon_state.py  test_concurrent_ops.py  test_connection_stress.py  test_dbus_diagnostics.py  test_degradation_diag.py  test_fix_verification.py  test_job_completed_diagnostics.py  test_loop_lifecycle.py  test_mount_unmount.py  test_path_namespace_diag.py  test_raw_signals.py  test_timing.py  test_udisks2_limits.py  test_zz_crash_monitor.py  test_zz_recovery.py  test_zz_udisks2_limits.py
tools/: log_monitor.py  signal_dumper.py
